--- a/07_project/06_keyBoard/style.css
+++ b/07_project/06_keyBoard/style.css
@@ -10,7 +10,7 @@ td {
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100vh;
+  height: 10 0vh;
 }
 
 .color {
